static/css/style.css
html {
  font-size: 62.5%;
}

.row {
    padding: 0;
}

nav.navbar {
    position: fixed;
    top:0;
    background-color: #89A6FB;
    height: 6rem;
    padding: 0;
    width: 100vw;
    box-shadow: 0 2px rgba(0, 0, 0, .3);
    z-index: 10;
}

div.collapse.navbar-collapse {
    justify-content: flex-end;
}

.navbar a.navbar-brand {
    position: absolute;
    font-size: 3rem;
    color: #ffffff;
    margin-left: 1rem;
}

button.navbar-toggler {
    position: absolute;
    right: 1rem;
    margin-right: 1rem;
}

.navbar li.nav-item a.nav-link {
    padding: .5rem 1rem;
    font-size: 2rem;
    color: #ffffff;
}

.navbar-nav {
    text-align: center;
    margin-top: 6rem;
    background-color: #89A6FB;
    box-shadow: 0 2px rgba(0, 0, 0, .3);
}

.main-container {
    position: relative;
    padding-top: 8rem;
    max-width: 90vw;
    min-height:100vh;
    margin-left: auto;
    margin-right: auto;
}

footer {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100vw;
    color: #89A6FB;
    font-size: 1.8rem;
    align-items: center;
}

.social-container, .copyright {
    display: flex;
}

.copyright {
    padding: 1rem;
    margin: 0;
}

.social-container i {
    font-size: 2.4rem;
    padding: 1rem;
    color: #89A6FB;
}

/* Post Styling */
.post-details {
    padding: 1rem;
    margin:0;
    margin-top: -2rem;
}

.filter-options {
    height: 6rem;
    display: flex;
    background-color: rgba(245, 244, 244, .5);
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    flex-direction: row;
    margin-bottom: 8rem;
    margin-right: auto;
    margin-left: auto;
}

.filter-control {
    display: flex;
    padding: 1rem;
    margin: 0;
    margin-top: auto;
    margin-bottom: auto;
    font-size: 1.6rem;
    color: #7697F9;
}

.sidebar {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 100%;
    padding: 0;
    height: 5.5rem;
    margin:0;
    max-width: 100%;
}

.post-card {
    margin-left: auto;
    margin-right: auto;
    border: 1px;
    max-width: 90vw;
    background-color: rgba(245, 244, 244, .5);
    min-height: 25rem;
    height: 25rem;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    margin-bottom: 5rem;
    padding: 0;
}

.post-title, .post-topic {
    font-size: 2.4rem;
}

.post-text, .post-author {
    font-size: 1.6rem;
}

.post-topic, .post-text,
.post-title {
    padding-top: .5rem;
}

.post-date {
    position: absolute;
    bottom: 1rem;
    font-size: 1.2rem;
    margin: 0;
}

.post-pluses {
    padding: 0;
    color: #ffffff;
    font-size: 1.4rem;
}

.sidebar i {
    padding: 0;
    color: #ffffff;
    font-size: 2.5rem;
}

.card-body.row {
    max-width:100%;
    padding: 0;
    margin: 0;
}

.post-comments, .post-votes  {
    text-align: center;
    margin: 0;
    padding: .5rem;
}

/* Topic Styling */
.sport {
    color: #0075F2;
}

.sport-sidebar {
    background-color: rgba(0, 117, 242, .6);
}

.entertainment {
    color: #78C3FB;
}

.entertainment-sidebar {
    background-color: rgba(120, 195, 251, .6);
}

.-news {
    color: #1B263B;
}

.news-sidebar {
    background-color: rgba(27, 38, 59, .6);
}

.general {
    color: #415A77;
}

.general-sidebar {
    background-color: rgba(65, 90, 119, .6);
}

.politics {
    color: #7697F9;
}

.politics-sidebar {
    background-color: rgba(118, 151, 249, .6);
}

.card-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

@media (min-width: 768px) {
    .navbar li.nav-item a.nav-link {
        padding: 1rem;
    }

    .navbar-nav {
        margin: 0;
        box-shadow: none;
    }

    .sidebar {
        flex-direction: column;
        width: 7rem;
        padding: 1rem;
        justify-content: space-between;
        height: 100%;
    }

    .post-pluses {
        text-align: center;
        margin-bottom: 0;
    }

    .post-votes, .post-comments  {
        display: flex;
        padding: 0;
    }

    .post-comments {
        margin-bottom: 1rem;
    }

    .post-votes {
        margin-top: 1rem;
    }

    .sidebar i {
        margin-bottom: .5rem;
        text-align: center;
    }

    .post-details {
        padding: 0;
        margin-left: 1rem;
        margin-top: 0;
    }

    .post-card {
        max-width: 80vw;
        width: 80vw;
    }

    .filter-options {
        max-width: 80vw;
    }
    
    footer {
        flex-direction: row;
        width: 100vw;
        color: #89A6FB;
        font-size: 1.8rem;
        align-items: center;
        justify-content: center;
        line-height: 2rem;
    }
}

@media (min-width: 1140px) {
    .filter-options {
        max-width: 60vw;
    }

    .post-card {
        max-width: 60vw;
    }
}

@media (min-width: 2000px) {
    .card-container {
        flex-direction: row;
        justify-content: space-between;
    }

    .post-card {
        width: 100rem;
        max-width: 40vw;
    }
}

